Implement safe semantic decision apply